5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1590_1015.log
== TEST (2019-03-25 15:32:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(min(a,b,c))
print(a+b+c)/3
print(max(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(a+b+c)/3
TypeError: unsupported operand type(s) for /: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(min(a,b,c))
print((a+b+c)/3)
print(max(a,b,c))
-- OUTPUT:
-2.0
2.6666666666666665
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(min(a,b,c))
print((a+b+c)/3)
print(max(a,b,c))
-- EXECUTION TIME:
0.146211
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2.0
2.6666666666666665
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(min(a,b,c))
print((a+b+c)/3)
print(max(a,b,c))
-- OUTPUT:
-2.0
2.6666666666666665
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:33:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(min(a,b,c))
print((a+b+c)/3)
print(max(a,b,c))
-- OUTPUT:
-2.0
2.6666666666666665
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:33:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c))
print(int(a+b+c)/3)
print(int(max(a,b,c)))
-- ERROR:
File "XXXX", line 8
    print(int(a+b+c)/3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:34:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c))
print(float(a+b+c)/3)
print(int(max(a,b,c)))
-- ERROR:
File "XXXX", line 8
    print(float(a+b+c)/3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:35:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int(a+b+c)/3)
print(int(max(a,b,c)))
-- OUTPUT:
-2
2.6666666666666665
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:35:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int(a+b+c)/3)
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.145698
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2.6666666666666665
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:35:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int(a+b+c)/3)
print(int(max(a,b,c)))
-- OUTPUT:
-2
2.6666666666666665
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- OUTPUT:
-2
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- OUTPUT:
-2
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.205017
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.286764
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.228476
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.124018
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/1015/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("escreva um numero"))
b=float(input("escreva um numero"))
c=float(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- OUTPUT:
-2
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- OUTPUT:
-2
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.130265
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.269565
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.13394
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.096519
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.144662
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.094249
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/1015/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.150179
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.102916
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.0986629
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.130688
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.098125
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.1024
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.250195
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.142611
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)/3))
print(int(max(a,b,c)))
-- EXECUTION TIME:
0.119393
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
escreva um numeroescreva um numeroescreva um numero-2
2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:40:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
print(int(min(a,b,c)))
print(int((a+b+c)-(min(a,b,c))+(max(a,b,c)))
print(int(max(a,b,c)))
-- ERROR:
File "XXXX", line 9
    print(int(max(a,b,c)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:42:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e)
print(int(e))
-- ERROR:
File "XXXX", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:42:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e)
print(int(e))
-- EXECUTION TIME:
0.168907
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:42:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e)
print(int(e))
-- ERROR:
File "XXXX", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:42:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e))
print(int(e))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:43:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e))
print(int(e))
-- EXECUTION TIME:
0.19616
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
20
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:43:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e))
print(int(e))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:43:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-d+e))
print(int(e))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:44:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-(d-e)) 
print(int(e))
-- ERROR:
File "XXXX", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:44:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-(d-e)) 
print(int(e))
-- EXECUTION TIME:
0.165394
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:44:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-(d-e)) 
print(int(e))
-- ERROR:
File "XXXX", line 11
    print(int(e))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:44:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
d=min(a,b,c)
e=max(a,b,c)
print(int(d))
print(int((a+b+c)-(d-e)))
print(int(e))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:47:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(menor-maior)))
print(int(maior))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:49:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(menor-maior)))
print(int(maior))
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:50:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.177315
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.1836
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.138917
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.125316
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.105889
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.28295
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:50:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- EXECUTION TIME:
0.121498
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-4
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:50:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:51:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:52:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
print(int(menor))
print(int((a+b+c)-(maior-menor)))
print(int(maior))
-- OUTPUT:
-2
-4
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
soma=(a+b+c)
soma= soma- menor
soma= soma - maior
print(int(menor))
print(int(soma)
print(int(maior))
-- ERROR:
File "XXXX", line 14
    print(int(maior))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
soma=(a+b+c)
soma= soma- menor
soma= soma - maior
print(int(menor))
print(int(soma))
print(int(maior))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:53:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("escreva um numero"))
b=int(input("escreva um numero"))
c=int(input("escreva um numero"))
menor=min(a,b,c)
maior=max(a,b,c)
soma=(a+b+c)
soma= soma- menor
soma= soma - maior
print(int(menor))
print(int(soma))
print(int(maior))
-- EXECUTION TIME:
0.206891
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
